--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="fav.png">
     <title>ArisBee</title>
     <link rel="stylesheet" href="design.css">
