--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="fav.png">
     <title>ArisBee</title>
     <link rel="stylesheet" href="design.css">
@@ -11,7 +11,7 @@
 
         <div class="p1st_block_one">
               <div class="FrstPageCompanyNaming">
-                    <a class="GenTitle">ArisBee</a><br><a class="FrstPageCompanySubNaming">Группа компаний</a>
+                    <div class="logotype"></div><a class="asylum-text">New Art Union</a>
               </div>
         </div>
 
@@ -21,6 +21,10 @@
           </div>
           <div class="container">
           <div class="project">
+            <div class="project_queue">
+                    Сдача I очереди - II кв. 2027,
+                     IV очереди - I кв. 2029
+            </div>
                   <div class="project_locat">
                           Санкт-Петербург. Новоохтинский район
                   </div>
@@ -28,18 +32,22 @@
                           ЖК Мореход
                   </div>
                   <div class="project_price morehod"> от <a id="price_numbers">3 400 000</a></div>
-                  <div class="project_descr">
+                  <div class="project_descr keeper">
                           Волнообразные дома, пруд во дворе и неповторимый пейзаж лесного массива.
                   </div>
                   <div class="projects_preview morehodpr"></div>
-                  <div><a href="layouts/Morehod_Apartaments_Layout_1house.pdf" class="links morehod">Ознакомиться с планировками →</a><br>
-                  <a href="layouts/MD_PED_1.pdf" class="links morehod">Ознакомиться с планом экстерьера дома (корпус I) →</a></div>
+                  <div class="keeper"><a href="layouts/Morehod_Apartaments_Layout_1house.pdf" class="links morehod">Планировки →</a><br>
+                  <a href="layouts/MD_PED_1.pdf" class="links morehod">Экстерьер дома (корпус I) →</a></div>
           </div>
         </div>
       </div>
         <div class="p2nd_block_rose">
           <div class="container"
           <div class="project">
+            <div class="project_queue">
+                  Сдача I очереди - I кв. 2025,
+                   II очереди - IV кв. 2026
+          </div>
                   <div class="project_locat">
                           Санкт-Петербург. Красногвардейский район
                   </div>
@@ -47,11 +55,11 @@
                           ЖК Золотой век
                   </div>
                   <div class="project_price zolotoivek"> от <a id="price_numbers">3 900 000</a></div>
-                  <div class="project_descr">
-                          Дома необычной формы в окружении парков с собственным скейт-парком, фонтаном и прогулочной зоной.
-                  </div>
+                  <div class="project_descr keeper">
+                          Невероятные планировки, дома необычной формы в окружении парков с собственным скейт-парком и фонтан с прогулочной зоной.
+                  </div><br>
                   <div class="projects_preview zolotoipr"></div>
-                  <div><a href="layouts/Zolotoi-Vek_Apartaments_Layouts.pdf" class="links zolotoivek">Ознакомиться с планировками →</a></div>
+                  <div class="keeper"><a href="layouts/Zolotoi-Vek_Apartaments_Layouts.pdf" class="links zolotoivek">Планировки →</a></div>
 
           </div>
         </div>
@@ -60,6 +68,10 @@
       <div class="p2nd_block_brown">
         <div class="container">
         <div class="project">
+          <div class="project_queue">
+                  Сдача I очереди - I кв. 2024,
+                   VIII очереди - III кв. 2027
+          </div>
                 <div class="project_locat">
                         Санкт-Петербург. Фрунзенский район
                 </div>
@@ -67,19 +79,43 @@
                         ЖК ЯстребГрад
                 </div>
                 <div class="project_price yastrebgrad"> от <a id="price_numbers">5 400 000</a></div>
-                <div class="project_descr">
+                <div class="project_descr keeper">
                         Дома, сливающиеся с парком. Дома, во дворе которых два настоящих пруда.
                 </div>
                 <div class="projects_preview yastrebgradpr"></div>
-                <div><a href="layouts/YastrebGrad_Apartaments_Layouts.pdf" class="links yastrebgrad">Ознакомиться с планировками →</a><br>
-                <a href="layouts/YG_PED_14.pdf" class="links yastrebgrad">Ознакомиться с планом экстерьера дома (корпус I, IV) →</a><br>
-                <a href="layouts/YG_PED_23.pdf" class="links yastrebgrad">Ознакомиться с планом экстерьера дома (корпус II, III) →</a><br>
-                <a href="layouts/YG_PED_58.pdf" class="links yastrebgrad">Ознакомиться с планом экстерьера дома (корпус V, VIII) →</a><br>
-                <a href="layouts/YG_PED_67.pdf" class="links yastrebgrad">Ознакомиться с планом экстерьера дома (корпус VI, VII) →</a><br></div>
+                <div class="keeper"><a href="layouts/YastrebGrad_Apartaments_Layouts.pdf" class="links yastrebgrad">Планировки →</a><br>
+                <a href="layouts/YG_PED_14.pdf" class="links yastrebgrad">Экстерьер дома (корпус I, IV) →</a><br>
+                <a href="layouts/YG_PED_23.pdf" class="links yastrebgrad">Экстерьер дома (корпус II, III) →</a><br>
+                <a href="layouts/YG_PED_58.pdf" class="links yastrebgrad">Экстерьер дома (корпус V, VIII) →</a><br>
+                <a href="layouts/YG_PED_67.pdf" class="links yastrebgrad">Экстерьер дома (корпус VI, VII) →</a><br></div>
         </div>
       </div>
     </div>
+    <div class="p2nd_block_gotic">
+      <div class="container">
+      <div class="project">
+        <div class="project_queue">
+                Сдача I очереди - II кв. 2025,
+                 III очереди - IV кв. 2028
+        </div>
+              <div class="project_locat">
+                      Санкт-Петербург. Центральный район
+              </div>
+              <div class="project_name">
+                      ЖК Готика
+              </div>
+              <div class="project_price gotic"> от <a id="price_numbers">13 900 000</a></div>
+              <div class="project_descr keeper">
+                      Строгость и статность - фундамент нового жилого комплекса в центре мегаполиса.
+              </div>
+              <div class="projects_preview goticpr"></div>
+              <div class="keeper"><a href="layouts/Gotika_Apartaments_Layouts.pdf" class="links gotic">Планировки →</a><br>
+              <a href="layouts/GT_PED_1.pdf" class="links gotic">Экстерьер дома (корпус I) →</a><br></div>
+      </div>
+    </div>
+  </div>
     <div class="asylum"><br>
-    Группа компаний "ArisBee"<br>Создано Сизовым Андреем © </div>
+      <div class="logotype"></div>
+    <a class="asylum-text">Группа ARISBEE - New Art Union.<br>Разработано Сизовым Андреем © </a></div>
   </body>
 </html>
