--- a/index.html
+++ b/index.html
@@ -4,15 +4,61 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="fav.png">
-    <title>ArisBee</title>
+    <title>АРИС</title>
     <link rel="stylesheet" href="design.css">
   </head>
   <body>
 
         <div class="p1st_block_one">
               <div class="FrstPageCompanyNaming">
-                    <div class="logotype"></div><a class="asylum-text">New Art Union</a>
+                    <div class="logotype"></div><a class="asylum-text"></a>
               </div>
+        </div>
+
+        <div class="welcome_1">
+              <div class="wlc0">
+                   ГК АРИС
+                    </div>
+              <div class="wlc1 keeper">
+                    Лидер строительного рынка России XXI.
+                  </div><br>
+              <div class="wlc2 keeper">
+                    Итоги прошлого года:
+                  </div>
+              <table class="keeper">
+                <tr class="wlcTable_numbs">
+                    <td>
+                      52
+                    </td>
+                    <td>
+                      160 га
+                    </td>
+                </tr>
+                <tr class="wlcTable_txt">
+                    <td>
+                      Дома сданы &nbsp; &nbsp; &nbsp;
+                    </td>
+                    <td>
+                      Банк площади
+                    </td>
+                </tr>
+                <tr class="wlcTable_numbs">
+                    <td>
+                      0
+                    </td>
+                    <td>
+                      9,92
+                    </td>
+                </tr>
+                <tr class="wlcTable_txt">
+                    <td>
+                      Задержек &nbsp;
+                    </td>
+                    <td>
+                      Рейтинг доверия покупателей
+                    </td>
+                </tr>
+                    </table>
         </div>
 
         <div class="p2nd_block_grey">
@@ -26,21 +72,26 @@
                      IV очереди - I кв. 2029
             </div>
                   <div class="project_locat">
-                          Санкт-Петербург. Новоохтинский район
+                          Санкт-Петербург. Красногвардейский район
                   </div>
                   <div class="project_name">
-                          ЖК Мореход
+                          ЖК Акробат
                   </div>
-                  <div class="project_price morehod"> от <a id="price_numbers">3 400 000</a></div>
+                  <div class="project_price morehod"> от <a id="price_numbers">3 650 000</a> руб.</div>
                   <div class="project_descr keeper">
-                          Волнообразные дома, пруд во дворе и неповторимый пейзаж лесного массива.
+                          Остров спокойной жизни внутри беспокойного мегаполиса.
                   </div>
                   <div class="projects_preview morehodpr"></div>
-                  <div class="keeper"><a href="layouts/Morehod_Apartaments_Layout_1house.pdf" class="links morehod">Планировки →</a><br>
-                  <a href="layouts/MD_PED_1.pdf" class="links morehod">Экстерьер дома (корпус I) →</a></div>
+                  <div class="keeper"><a href="layouts/AKROBAT_GENPLAN.pdf" class="links morehod">Генеральный план ЖК →</a><br>
+                    <a href="layouts/AKROBAT_PLANS_1.pdf" class="links morehod">Планировки (корпус I) →</a><br>
+                    <a href="layouts/AKROBAT_EXT_1.pdf" class="links morehod">Экстерьер (корпус I) →</a><br>
+                  <a href="layouts/AKROBAT_ALL_2.pdf" class="links morehod">Экстерьер и планировки (корпус II) →</a></div>
           </div>
         </div>
       </div>
+
+
+
         <div class="p2nd_block_rose">
           <div class="container"
           <div class="project">
@@ -116,6 +167,6 @@
   </div>
     <div class="asylum"><br>
       <div class="logotype"></div>
-    <a class="asylum-text">Группа ARISBEE - New Art Union.<br>Разработано Сизовым Андреем © </a></div>
+    <a class="asylum-text">Группа АРИС. Архитектурный реализм - Инвестиционное строительство<br>Разработано Сизовым Андреем © </a></div>
   </body>
 </html>
