--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       52
                     </td>
                     <td>
-                      160 га
+                      160 +
                     </td>
                 </tr>
                 <tr class="wlcTable_txt">
@@ -39,7 +39,7 @@
                       Дома сданы &nbsp; &nbsp; &nbsp;
                     </td>
                     <td>
-                      Банк площади
+                      Банк площади (га)
                     </td>
                 </tr>
                 <tr class="wlcTable_numbs">
